Cluster/argocd-manifest/00-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #  VPN 대역(10.0.0.0/24)과 내부 LAN 대역만 허용
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/24,192.168.2.0/24"
    #  ArgoCD는 자체 HTTPS를 사용하므로 백엔드 프로토콜 지정 필수
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.studylink.click
      secretName: argocd-server-tls
  rules:
    - host: argocd.studylink.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
